# Pirates-Shipathon

./: app.py  data.csv  first.cpp  genre_model.pkl  pyproject.toml  requirements.txt  second.cpp  tfidf_vectorizer.pkl  third.cpp  trial input.txt  trial.txt  try.txt
Model for shipathon/: Pirates Model.py
pythobn/: againpractice.py  bsdk.py  codeContest p3.py  csvtool.py  department_details.csv  employees.csv  fifth.py  fourth.cpp  fourth.py  newstudents.csv  p1.py  p1_input.txt  p2.py  practice.py  second.py  simple.py  sixth.py  students.csv  sui.py  test.py  third.py  trial.txt  yolo.py  yololo.py
